# lab5

./: CMakeLists.txt  data.cpp  data.h  info.txt  lab5.txt  main.cpp
